exports[`Storyshots API [JSON] kind 1`] = `
<div>
  <pre>
    {
      \"data\": [
        \"default\",
        \"primary\",
        \"success\",
        \"error\",
        \"warning\"
      ]
    }
  </pre>
</div>
`;

exports[`Storyshots API [JSON] theme 1`] = `
<div>
  <pre>
    {
      \"data\": {
        \"color\": {
          \"black\": \"#353630\",
          \"grayBase\": \"#999A94\",
          \"grayDark\": \"#D1D2D3\",
          \"grayLight\": \"#FAFAFA\",
          \"white\": \"#FFFFFF\",
          \"default\": \"#FAFAFA\",
          \"primary\": \"#00A1DE\",
          \"success\": \"#69BE28\",
          \"error\": \"#F5364E\",
          \"warning\": \"#F39A1E\"
        },
        \"base\": {
          \"bodyBackground\": \"#F1F2F7\",
          \"fontSize\": \"14px\",
          \"lineHeight\": 1.5
        },
        \"fontSize\": {
          \"small\": \"86%\",
          \"p\": \"1rem\",
          \"h6\": \"1rem\",
          \"h5\": \"1rem\",
          \"h4\": \"1.14rem\",
          \"h3\": \"1.43rem\",
          \"h2\": \"1.71rem\",
          \"h1\": \"2.43rem\"
        }
      }
    }
  </pre>
</div>
`;

exports[`Storyshots B API 1`] = `
<b
  className="dXWQID">
  Bold content
</b>
`;

exports[`Storyshots B CJK 1`] = `
<h4
  className="fNDHSu"
  color="black">
  <b
    className="dXWQID">
    控制開關粗體字
  </b>
</h4>
`;

exports[`Storyshots B With color 1`] = `
<div
  className="zTBZX"
  color="primary">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <b
    className="dXWQID">
     Bold content 
  </b>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;

exports[`Storyshots B Within <P> 1`] = `
<div
  className="kISpry"
  color="black">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <small
    className="eIljqN">
    <b
      className="dXWQID">
       Bold content 
    </b>
  </small>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;

exports[`Storyshots Button API 1`] = `
<button
  className="jRTTze"
  kind="primary">
  Simple button
</button>
`;

exports[`Storyshots Button Overriding style 1`] = `
<button
  className="cqoeNx"
  kind="primary"
  onClick={[Function]}>
  Overriding style
</button>
`;

exports[`Storyshots Button With kind props 1`] = `
<div
  className="ekbxOp">
  <button
    className="fQCDqY"
    kind="default"
    onClick={[Function]}>
    default
  </button>
  <button
    className="jRTTze"
    kind="primary"
    onClick={[Function]}>
    primary
  </button>
  <button
    className="dKIIwG"
    kind="success"
    onClick={[Function]}>
    success
  </button>
  <button
    className="cbvlGV"
    kind="error"
    onClick={[Function]}>
    error
  </button>
  <button
    className="caiLV"
    kind="warning"
    onClick={[Function]}>
    warning
  </button>
</div>
`;

exports[`Storyshots Button With theme provider (Material) 1`] = `
<div
  className="ekbxOp">
  <button
    className="fLAIJr"
    kind="default"
    onClick={[Function]}>
    default
  </button>
  <button
    className="jBPAeu"
    kind="primary"
    onClick={[Function]}>
    primary
  </button>
  <button
    className="ddoWjI"
    kind="success"
    onClick={[Function]}>
    success
  </button>
  <button
    className="gGdFcO"
    kind="error"
    onClick={[Function]}>
    error
  </button>
  <button
    className="hYHCGC"
    kind="warning"
    onClick={[Function]}>
    warning
  </button>
</div>
`;

exports[`Storyshots Card API 1`] = `
<div
  className="lbjwQK">
  Card Content
</div>
`;

exports[`Storyshots DataChannelCard API 1`] = `
<div
  className="jerMqv">
  <div
    className="lguxPP">
    <a
      href="">
      Link
    </a>
  </div>
  <div
    className="bouzDW">
    Children
  </div>
  <div>
    <h4
      className="fNDHSu"
      color="black">
      Title
    </h4>
    <div
      className="dcrOYj"
      color="grayBase">
      <small
        className="eIljqN">
        Last data point time : 2015-06-12 12:00
      </small>
    </div>
    <hr
      className="kAIFmf" />
    <div
      className="eVDNmh"
      color="black">
      <MockReactTextTruncate
        line={2}
        text="You can input description of controller here. You can input description of You can input description of controller here. You can input description of"
        truncateText=" ..." />
    </div>
  </div>
</div>
`;

exports[`Storyshots DataChannelCard Fixed width 1`] = `
<div
  className="iDvoso jerMqv">
  <div
    className="lguxPP">
    V
  </div>
  <div
    className="bouzDW">
    <div
      checked={false}
      className="cICTqL" />
  </div>
  <div>
    <h4
      className="fNDHSu"
      color="black">
      Title
    </h4>
    <div
      className="dcrOYj"
      color="grayBase">
      <small
        className="eIljqN">
        Last data point time : 2015-06-12 12:00
      </small>
    </div>
    <hr
      className="kAIFmf" />
    <div
      className="eVDNmh"
      color="black">
      <MockReactTextTruncate
        line={2}
        text="You can input description of controller here. You can input description of You can input description of controller here. You can input description of"
        truncateText=" ..." />
    </div>
  </div>
</div>
`;

exports[`Storyshots Heading API 1`] = `
<h1
  className="jHmIHy"
  color="black">
  Level 1
</h1>
`;

exports[`Storyshots Heading With color props 1`] = `
<div>
  <h2
    className="kPrakD"
    color="black">
    Level 2 
    black
  </h2>
  <h2
    className="gAvEFR"
    color="grayBase">
    Level 2 
    grayBase
  </h2>
  <h2
    className="dlFtbQ"
    color="grayDark">
    Level 2 
    grayDark
  </h2>
  <h2
    className="faUXNq"
    color="grayLight">
    Level 2 
    grayLight
  </h2>
  <h2
    className="hVRjXS"
    color="white">
    Level 2 
    white
  </h2>
  <h2
    className="faUXNq"
    color="default">
    Level 2 
    default
  </h2>
  <h2
    className="jEpKVo"
    color="primary">
    Level 2 
    primary
  </h2>
  <h2
    className="sGkNP"
    color="success">
    Level 2 
    success
  </h2>
  <h2
    className="ecVAoE"
    color="error">
    Level 2 
    error
  </h2>
  <h2
    className="kJhjYD"
    color="warning">
    Level 2 
    warning
  </h2>
</div>
`;

exports[`Storyshots Heading With level props 1`] = `
<div>
  <h1
    className="jHmIHy"
    color="black">
    h
    1
     - Level 
    1
       (
    2.43rem
     = 
    34.02px
    )
  </h1>
  <h2
    className="kPrakD"
    color="black">
    h
    2
     - Level 
    2
       (
    1.71rem
     = 
    23.939999999999998px
    )
  </h2>
  <h3
    className="dbwMFa"
    color="black">
    h
    3
     - Level 
    3
       (
    1.43rem
     = 
    20.02px
    )
  </h3>
  <h4
    className="fNDHSu"
    color="black">
    h
    4
     - Level 
    4
       (
    1.14rem
     = 
    15.959999999999999px
    )
  </h4>
  <h5
    className="heMyAM"
    color="black">
    h
    5
     - Level 
    5
       (
    1rem
     = 
    14px
    )
  </h5>
  <h6
    className="heMyAM"
    color="black">
    h
    6
     - Level 
    6
       (
    1rem
     = 
    14px
    )
  </h6>
</div>
`;

exports[`Storyshots P API 1`] = `
<p
  className="kISpry"
  color="black">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur esse dolore incididunt incididunt aliquip pariatur est minim officia sit. Nulla pariatur duis duis quis commodo cupidatat voluptate enim culpa elit adipisicing do cupidatat sint anim. Cillum elit magna occaecat proident sit cupidatat ad quis sunt id culpa culpa. Ad duis nulla in incididunt amet consequat officia ad voluptate voluptate. Pariatur eiusmod ullamco cupidatat non magna officia aute magna deserunt qui aute dolor eu. Qui amet non ex cillum sunt ad velit consequat ipsum velit.
</p>
`;

exports[`Storyshots P Nested children with div 1`] = `
<div
  className="kISpry"
  color="black">
  <div>
    <span>
      Qui amet non ex cillum sunt ad velit consequat ipsum velit.
    </span>
  </div>
</div>
`;

exports[`Storyshots P With color props 1`] = `
<div>
  <div
    className="kISpry"
    color="black">
    Paragraph 
    black
  </div>
  <div
    className="dcrOYj"
    color="grayBase">
    Paragraph 
    grayBase
  </div>
  <div
    className="isCSrn"
    color="grayDark">
    Paragraph 
    grayDark
  </div>
  <div
    className="gKeIpy"
    color="grayLight">
    Paragraph 
    grayLight
  </div>
  <div
    className="eofFXh"
    color="white">
    Paragraph 
    white
  </div>
  <div
    className="gKeIpy"
    color="default">
    Paragraph 
    default
  </div>
  <div
    className="zTBZX"
    color="primary">
    Paragraph 
    primary
  </div>
  <div
    className="bRFRvJ"
    color="success">
    Paragraph 
    success
  </div>
  <div
    className="foqfyt"
    color="error">
    Paragraph 
    error
  </div>
  <div
    className="dxpNWh"
    color="warning">
    Paragraph 
    warning
  </div>
</div>
`;

exports[`Storyshots Small API 1`] = `
<small
  className="eIljqN">
  Small content
</small>
`;

exports[`Storyshots Small With color 1`] = `
<div
  className="zTBZX"
  color="primary">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <small
    className="eIljqN">
     Small content 
  </small>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;

exports[`Storyshots Small Within <P> 1`] = `
<div
  className="kISpry"
  color="black">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <small
    className="eIljqN">
     Small content 
  </small>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;

exports[`Storyshots Switch API 1`] = `
<div>
  <div
    checked={false}
    className="cICTqL" />
  <div
    checked={true}
    className="jvOKcu" />
</div>
`;

exports[`Storyshots Switch Overriding style 1`] = `
<div
  checked={false}
  className="bTyEhn"
  onClick={[Function]} />
`;

exports[`Storyshots Switch Stateful switch 1`] = `
<div
  checked={false}
  className="cICTqL"
  onClick={[Function]} />
`;
